# mathematical

./: .gitattributes  .gitignore  .gitmodules  .rubocop.yml  .travis.yml  CHANGELOG.md  Gemfile  LICENSE.txt  README-Windows.md  README.md  Rakefile  bower.json  index.html  mathematical.gemspec  server.rb
.github/workflows/: build-native-gems.yml  lint.yml  tag_and_release.yml  test.yml
assets/javascripts/: demo.js
assets/stylesheets/: styles.css
ext/: README.md
ext/itex2mml/: .gitignore  COPYING.itex2MML  Makefile.am  README.itex2MML.md  itex2MML.l  itex2MML.y
ext/mathematical/: CMakeLists.txt  FindNewerRubies.cmake  README.lasem.md  cairo_callbacks.c  cairo_callbacks.h  extconf.rb  itex2MML.h  lasem_overrides.c  lasem_overrides.h  lasemrender.c  lsm.c  lsm.h  lsmattributes.c  lsmattributes.h  lsmcairo.c  lsmcairo.h  lsmdebug.c  lsmdebug.h  lsmdom.h  lsmdomdocument.c  lsmdomdocument.h  lsmdomelement.c  lsmdomentities.c  lsmdomentities.h  lsmdomenumtypes.c.template  lsmdomenumtypes.h.template  lsmdomimplementation.c  lsmdomimplementation.h  lsmdomnamednodemap.c  lsmdomnamednodemap.h  lsmdomnode.c  lsmdomnode.h  lsmdomnodelist.c  lsmdomparser.c  lsmdomparser.h  lsmdomview.c  lsmdomview.h  lsmitex.c  lsmitex.h  lsmmathml.h  (+189 more)
ext/mathematical/itexToMML/: lex.yy.c  y.tab.c  y.tab.h
fonts/: fonts.conf
lib/: mathematical.bundle  mathematical.rb
lib/mathematical/: configuration.rb  corrections.rb  parser.rb  render.rb  sorting.rb  validator.rb  version.rb
lib/mathematical/html/: html.rb  math.rb
lib/mathematical/mml/: math_elem.rb  mml.rb  mrow_elem.rb  semantics_elem.rb
lib/mathematical/svg/: svg.rb
lib/mathematical/svg/bbox/: bbox.rb
script/: bench  benchmark.rb  bootstrap  build_static_deps  cibuild  download_sources  generate_changelog  generate_samples  install_linux_deps  install_macos_deps  single_test  single_text  update_submodules
test/: test_helper.rb
test/mathematical/: array_test.rb  basic_test.rb  corrections_test.rb  delimiters_test.rb  fixtures_test.rb  maliciousness_test.rb  mathjax_test.rb  mathml_test.rb  multiples_test.rb  performance_test.rb  png_test.rb
test/mathematical/fixtures/after/: backslashes.html  basic.html  basic.text  brackets_display.html  compliance_accents.md  compliance_arrows.html  compliance_colors.md  compliance_greek_letters.html  compliance_greek_letters.md  compliance_large_math.html  compliance_log_symbols.html  compliance_operators.html  compliance_operators.md  dollar_sign_inline.html  equation_display.html  equation_display.md  multiple_dollar_inline.html  parens_inline.html
test/mathematical/fixtures/before/: backslashes.text  brackets_display.text  compliance_accents.text  compliance_arrows.text  compliance_colors.text  compliance_greek_letters.text  compliance_large_math.text  compliance_log_symbols.text  compliance_operators.text  dollar_sign_inline.text  equation_display.text  multiple_dollar_inline.text  parens_inline.text
test/mathematical/fixtures/performance/: big_file.text
